=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------
 
Fixes
-----

2017/11/13 1.7.3
================

Fixes
-----

 - The download url now links to the stable CrateDB version.

 - Replicates shards in the ``Unassigned`` row of the Shards view 
   are now grouped by id.

 - Fixed issue that caused closed partitions to show a ``CRITICAL`` 
   data state.

2017/11/06 1.7.2
================

Fixes
-----

 - Remove horizontal scroll from the console editor.

 - show all nodes in admin ui shard view, even those which 
   have no shards.

 - Fixed an issue that cause the statusbar to show an error
   if the user has an adblocker enabled. 

 - Fixed an issue that caused extra spaces to be added 
   to the formatted console results.

 - Fixed an issue that caused ``NULL`` generated column values 
   not to be displayed in the tables view.  

 - Show messages when in the Tables view when the table list is empty.

2017/10/20 1.7.1
================

Fixes
-----

 - Fixed an issue that delayed the overview chart's initial display.  

 - Fixed issue that caused the redirect to ``/401`` in case of 
   unauthorized access to fail. 

 - Fixed casting issue in the Monitoring query.

 - Fixed issue that caused the cluster view to not redirect
   to the first node by default. 

2017/10/17 1.7.0
================

Changes
-------

 - Added pagination to Console results.

2017/10/17 1.6.4
================

Fixes
----- 

 - Keep input of console when changing tabs.

 - Added focus on textbox when the console view is loaded and after
   clicking on the `Execute Query` button.

 - Shard and node details are now loaded on demand in the shards view.

 - Fixed issue that caused the cluster check display to be delayed.

 - Fix formating of strings in the console view.

2017/10/10 1.6.3
================

Fixes
----- 

 - Update position of the navigation menu elements.
